<resources>
    <string name="app_name">Poultryfarm</string>
    <string name="welcome">Welcome</string>
    <string name="poultry_farm">Poultry Farm</string>
    <string name="admin_login">Admin Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dashboard">Dashboard</string>
    <string name="add_farmer">Add Farmer</string>
    <string name="view_farmer">View Farmer</string>
    <string name="add_supplier">Add Supplier</string>
    <string name="view_supplier">View Supplier</string>
    <string name="logout">Logout</string>
    <string name="add_client">Add Client</string>
    <string name="farmer_name">Farmer Name</string>
    <string name="farm_name">Farm Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="submit">Submit</string>
    <string name="search_here">Search Here...</string>
    <string name="client_name">Client Name</string>
    <string name="city_name">City Name</string>
    <string name="customer_name">Customer Name</string>
    <string name="edit_client">Edit Client</string>
    <string name="cycle_1">Cycle 1</string>
    <string name="complete">Completed</string>
    <string name="running">Running</string>
    <string name="create_cycle">Create Cycle</string>
    <string name="description">Description</string>
    <string name="qut">Qty</string>
    <string name="price">Price</string>
    <string name="total">Total</string>
    <string name="date_picker">Date Picker</string>
    <string name="item_name">Item Name</string>
    <string name="add_new">Add New</string>
    <string name="create">Create</string>
    <string name="credit">Credit:</string>
    <string name="debit">Debit:</string>
    <string name="current">Current:</string>
    <string name="average">Average:</string>
    <string name="cpb">CPB:</string>
    <string name="total_feed">Total Feed:</string>
    <string name="fcr">FCR:</string>
    <string name="cfcr">CFCR:</string>
    <string name="dead">Dead:</string>
    <string name="total_given_birds">Total Given Birds:</string>
    <string name="remaining_birds">Remaining Birds:</string>
    <string name="weight">Weight</string>
    <string name="others">Others</string>
    <string name="bill_number">Bill Number</string>
    <string name="other_expenses">Other Expenses</string>
    <string name="bill_no">Bill No.:</string>

</resources>