<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OthersActivity2">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/blue">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/poultry_farm"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"/>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <TextView
        android:id="@+id/txtcrd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/other_expenses"
        android:gravity="center"
        android:layout_marginTop="80dp"
        android:textSize="40dp"
        android:textColor="@color/blue"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btndate"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/edtshape"
        android:layout_marginTop="30dp"
        android:text="@string/date_picker"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textAllCaps="false"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/txtdes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txttotal1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_below="@id/btndate"
           android:layout_toRightOf="@id/txtdes"
            android:layout_marginTop="20dp"
            android:layout_marginStart="180dp"
            tools:ignore="NotSibling" />

        <EditText
            android:id="@+id/edtitemname"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:background="@drawable/edittextshapenew"
            android:hint="@string/item_name"
            android:layout_below="@id/txtdes"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:textColorHint="@color/black"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/edtitotal"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:background="@drawable/edittextshapenew"
            android:layout_toRightOf="@id/txtdes"
            android:layout_below="@id/txttotal1"
            android:layout_marginTop="15dp"
            android:layout_marginStart="160dp"
            android:textColorHint="@color/black"
            android:padding="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addnew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edtshape"
            android:backgroundTint="@color/blue"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginTop="200dp"
            android:text="@string/add_new"
            android:textAllCaps="false"
            android:drawableStart="@drawable/baseline_add_24"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAlignment="center"
            android:elevation="15dp"
            android:stateListAnimator="@null"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#E6EB0F"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginTop="100dp"
            android:text="@string/others"
            android:layout_below="@+id/addnew"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAlignment="center"
            android:elevation="15dp"
            android:stateListAnimator="@null"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:textSize="20sp"/>











    </RelativeLayout>

</LinearLayout>